--- a/FeatureTest/FeatureTest.csproj
+++ b/FeatureTest/FeatureTest.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SearchClothes.Application\SearchClothes.Application.csproj" />
+  </ItemGroup>
+
 </Project>
