--- a/SearchClothes.WebApi/SearchClothes.WebApi.csproj
+++ b/SearchClothes.WebApi/SearchClothes.WebApi.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SearchClothes.Application\SearchClothes.Application.csproj" />
+    <ProjectReference Include="..\SearchClothes.Persistence\SearchClothes.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
