created tag controller, handlers for him. changed structure in application

--- a/SearchClothes.Application/SearchClothes.Application.csproj
+++ b/SearchClothes.Application/SearchClothes.Application.csproj
@@ -18,10 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Tags\" />
-    <Folder Include="Rates\" />
-    <Folder Include="Posts\" />
-    <Folder Include="Users\Queries\" />
+    <Folder Include="Commands\Rates\" />
+    <Folder Include="Commands\Posts\" />
   </ItemGroup>
 
 </Project>
