created user service, almost created photo saving, created post controller, fixed routing

--- a/SearchClothes.WebApi/SearchClothes.WebApi.csproj
+++ b/SearchClothes.WebApi/SearchClothes.WebApi.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\SearchClothes.Persistence\SearchClothes.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Photos\" />
+  </ItemGroup>
+
 </Project>
