--- a/SearchClothes.Application/SearchClothes.Application.csproj
+++ b/SearchClothes.Application/SearchClothes.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.14" />
   </ItemGroup>
 
@@ -19,7 +20,6 @@
 
   <ItemGroup>
     <Folder Include="Commands\Rates\" />
-    <Folder Include="Commands\Posts\" />
   </ItemGroup>
 
 </Project>
